<resources>
    <string name="app_name">TVSeries</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_search">Search</string>
    <string name="login">Log in</string>
    <string name="continue_as_guest">Continue as Guest</string>
    <string name="tv_series">TV Series</string>
    <string name="title_user">User</string>
    <string name="write_down_your_experiences">Write a new comment</string>
    <string name="send">Send</string>
    <string name="delete">Delete</string>
    <string name="new_series">New Series</string>
    <string name="pegi_prompt">Choose a rating</string>
    <string name="year">Year</string>
    <string name="title">Title</string>
    <string name="follow">Follow</string>
    <string name="overview">Overview</string>
    <string name="content_rating">Content rating</string>
    <string name="add_cover_image">Add cover image</string>
    <string name="cover_image">Cover image</string>
    <string name="save">Save</string>
    <string name="episode_list">Episode List</string>
    <string name="new_episode">New Episode</string>
    <string name="full_cast">Cast</string>
    <string name="ratings">Ratings</string>
    <string name="log_out">Log out</string>
    <string name="no_result">No result</string>
    <string name="followed">Followed</string>
    <string name="watched">Watched</string>
    <string name="season_1">Season 1</string>
    <string name="top_rated">Top rated</string>
    <string name="popular">Popular</string>
    <string name="latest">Latest</string>
    <string-array name="pegi_arrays">
        <item>0+</item>
        <item>6+</item>
        <item>12+</item>
        <item>16+</item>
        <item>18+</item>
    </string-array>
</resources>
